--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,12 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       
+      - name: Start HTTP Server
+        run: python -m http.server 8000 &
+        
+      - name: Wait for server
+        run: npx wait-on http://localhost:8000 --timeout 30000
+      
       - name: Run E2E tests
         run: npm run test:e2e
       
