--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@types/jest": "^29.5.0",
     "eslint": "^8.50.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "wait-on": "^7.2.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
